--- a/css/style.css
+++ b/css/style.css
@@ -17,19 +17,15 @@ header {
   height: 100vh;
 }
 
-.bg-dark {
-  background-color: rgba(0, 0, 0, 0.6) !important;
-}
-
 .navbar-dark .navbar-nav .nav-link {
   color: #fff;
   padding-left: 20px;
   padding-right: 20px;
-  transition: color 0.8s ease-in-out;
+  transition: color 0.6s ease-in-out;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
-  color: #888;
+  color: #e65f78 !important;
 }
 
 header .overlay {
